--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <div class="container">
             <nav>
                 <img src="images/logo.png" class="logo"></img>
-                <ul>
-                    <li><a href="#">Home</a></li>
+                <ul id="sidemenu">
+                    <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Gallery</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#location">Location</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <i class="fas fa-times"></i>
+                    <i class="fas fa-times" onclick="closemenu()"></i>
                 </ul>
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
                 <p>ChronoCraft</p>
@@ -195,12 +195,13 @@
                     <a href="images/Terms.pdf" download class="btn btn2">Terms & Conditions</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn3">Submit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
