--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo"></img>
+                <img src="Images/logo.png" class="logo"></img>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png">
+                    <img src="Images/user.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Designer</h1>
@@ -87,55 +87,55 @@
             <h1 class="sub-title"><center>Our Watches</center></h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/1.png" alt="">
+                    <img src="Images/1.png" alt="">
                     <div class="layer">
                         <h2>Rolex EleganceMaster</h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/2.png" alt="">
+                    <img src="Images/2.png" alt="">
                     <div class="layer">
                         <h2>RoyalLux EliteTimepiece
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/3.png" alt="">
+                    <img src="Images/3.png" alt="">
                     <div class="layer">
                         <h2>PrestigeCraft ChronoGlam
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/4.png" alt="">
+                    <img src="Images/4.png" alt="">
                     <div class="layer">
                         <h2>MajesticCrown PrestigeSeries
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/5.png" alt="">
+                    <img src="Images/5.png" alt="">
                     <div class="layer">
                         <h2>OpulentStyle MasterHorizon
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/6.png" alt="">
+                    <img src="Images/6.png" alt="">
                     <div class="layer">
                         <h2>OSignatureSculpt RadiantRhythm
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/7.png" alt="">
+                    <img src="Images/7.png" alt="">
                     <div class="layer">
                         <h2>TimelessGlamour GrandPrestige
                         </h2>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/8.png" alt="">
+                    <img src="Images/8.png" alt="">
                     <div class="layer">
                         <h2>RegalAura LuxeEternal
                         </h2>
@@ -192,7 +192,7 @@
                         <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.pinterest.com" target="_blank"><i class="fa fa-pinterest-square"></i></a>
                     </div>
-                    <a href="images/Terms.pdf" download class="btn btn2">Terms & Conditions</a>
+                    <a href="Images/Terms.pdf" download class="btn btn2">Terms & Conditions</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
